# rhayader

./: .gitignore  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  Executor.cpp  Executor.hpp  FileReader.cpp  FileReader.hpp  Function.hpp  Makefile  Node.hpp  ParseError.hpp  Parser.cpp  Parser.hpp  README.md  Reader.cpp  Reader.hpp  Soviet.sln  Soviet.vcxproj  Soviet.vcxproj.filters  SyntaxError.hpp  Token.hpp  TokenType.hpp  Variable.hpp  a.out  argshelper.cpp  argshelper.hpp  file_reader.cpp  file_reader.hpp  index.cpp  lexer.cpp  lexer.hpp  lexer_speedtest.hpp  lexerhelper.hpp  main.cpp  output.hpp  parser_speedtest.hpp  parserhelper.hpp  printTree.hpp  repl.cpp  (+6 more)
Debug/: Soviet.ilk  vc142.idb
Debug/Soviet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Soviet.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: Soviet.iobj  Soviet.ipdb  blyat
Release/Soviet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Soviet.lastbuildstate  Soviet.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
blyat/: .gitignore  CustomFunction.ts  Executor.ts  Util.ts  Variables.ts  globals.ts  index.ts  test.asn  tsconfig.json
blyat/functions/: Add.ts  Function.ts  Print.ts  Var.ts
evaluator/: EvaluateError.cpp  EvaluateError.hpp  Function.hpp  GlobalScope.cpp  GlobalScope.hpp  Scope.cpp  Scope.hpp  Thread.cpp  Thread.hpp  dumpValue.hpp  evaluator.cpp  evaluator.hpp  valueCast.hpp  value_cast.hpp
evaluator/modules/: Array.cpp  Array.hpp  IO.cpp  IO.hpp  Map.cpp  Map.hpp  Math.cpp  Math.hpp  String.cpp  String.hpp  ThreadModule.cpp  ThreadModule.hpp
evaluator/values/: ArrayValue.cpp  ArrayValue.hpp  BooleanValue.cpp  BooleanValue.hpp  ExplicitReturnValue.cpp  ExplicitReturnValue.hpp  FunctionValue.cpp  FunctionValue.hpp  MapValue.cpp  MapValue.hpp  ModuleValue.cpp  ModuleValue.hpp  NullValue.cpp  NullValue.hpp  NumberValue.cpp  NumberValue.hpp  RangeValue.cpp  RangeValue.hpp  StringValue.cpp  StringValue.hpp  UndefinedValue.cpp  UndefinedValue.hpp  Value.hpp  ValueType.cpp  ValueType.hpp  values.hpp
examples/: circle.sov  fib.sov  references.sov  useless.sov
js/: index.js  lexer.ts  package-lock.json  package.json  parser.js  parser.ts  pimposlaw  tsconfig.json
js/src/: demo.json  evaluator.ts  index.ts  lexer.ts  parser.ts  util.ts
parser/: ParseError.cpp  ParseError.hpp  Parser.cpp  Parser.hpp  TokenIterator.hpp  dumpNode.cpp  dumpNode.hpp  nodeCast.hpp  node_cast.hpp  nodes.cpp  nodes.hpp
parser/nodes/: AddOpNode.hpp  DivOpNode.hpp  DoubleEqualsOpNode.hpp  EqualsOpNode.hpp  FuncCallNode.hpp  LeafNode.hpp  MulOpNode.hpp  NameNode.hpp  Node.hpp  NodeType.hpp  NumberNode.hpp  OperatorNode.hpp  StringNode.hpp  SubOpNode.hpp  nodes.hpp
test/: test.cpp  tokenizer_tests.cpp
tokenizer/: FileReadError.cpp  FileReadError.hpp  NoTokensError.cpp  NoTokensError.hpp  PendingToken.hpp  PendingTokenType.hpp  Token.cpp  Token.hpp  TokenList.cpp  TokenList.hpp  TokenType.cpp  TokenType.hpp  Tokenizer.cpp  Tokenizer.hpp  Tokens.hpp  dumpTokens.hpp  tokenizer.hpp
util/: Error.cpp  Error.hpp  colors.cpp  colors.hpp  util.cpp  util.hpp
x64/Release/: Soviet.iobj  Soviet.ipdb
x64/Release/Soviet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Soviet.lastbuildstate  Soviet.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
